# actix-rust-websocket-example

./: Cargo.toml
src/: client.rs  codec.rs  main.rs  session.rs
static/: index.html
