[package]
name = "websocket-tcp-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "websocket-server"
path = "src/main.rs"

[[bin]]
name = "websocket-client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-codec = "0.5.1"
actix-files = "0.6.2"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
byteorder = "1.2"
env_logger = "0.10.0"
futures-util = { features = ["sink"] }
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { features = ["full"] }
tokio-stream = "0.1.8"
tokio-util = "0.7.9"
